# web2api

./: README.md  docker-compose.yml  pyproject.toml
tests/e2e/: test_e2e.py
tests/integration/: test_api.py  test_discovery.py
tests/unit/: test_auth.py  test_cli.py  test_config.py  test_mcp_server.py  test_recipe_manager.py
web2api/: __init__.py  auth.py  config.py  main.py  mcp_bridge.py  mcp_server.py  mcp_utils.py  recipe_admin_api.py  recipe_manager.py  registry.py
web2api/templates/: index.html
